added some features

--- a/backend/views/index.ejs
+++ b/backend/views/index.ejs
@@ -21,5 +21,7 @@
       <p>There are no blogs to display</p>
       <% } %>
     </div>
+
+    <%- include('./partials/footer.ejs') %>
   </body>
 </html>
