--- a/backend/views/create.ejs
+++ b/backend/views/create.ejs
@@ -15,5 +15,6 @@
         <button type="submit">Submit</button>
       </form>
     </div>
+    <%- include('./partials/footer.ejs') %>
   </body>
 </html>
